Replace Gradle Buildpacks with Dockerfile